--- a/src/app/modules/ventas/crear-venta/crear-venta.html
+++ b/src/app/modules/ventas/crear-venta/crear-venta.html
@@ -269,14 +269,14 @@
     <!-- TABLA -->
     <div class="t-table-head t-small">
         <span>COD</span>
-        <span>DESCRIPCIÓN</span>
+        <span>NOMBRE</span>
         <span>CANT</span>
         <span>P.U</span>
         <span>P.T</span>
     </div>
 
     <div class="t-table-row t-small" *ngFor="let it of facturaParaImprimir.items; let i = index">
-        <span class="t-cell">{{ it.codigo || it.productoId || i + 1 }}</span>
+        <span class="t-cell">{{ it.idInterno || it.codigo || (i + 1) }}</span>
         <span class="t-cell t-cut">{{ it.nombre }}</span>
         <span class="t-cell t-right">{{ it.cantidad }}</span>
         <span class="t-cell t-right">{{ it.precioUnitario | number:'1.2-2' }}</span>
