--- a/src/app/modules/ventas/crear-venta/crear-venta.html
+++ b/src/app/modules/ventas/crear-venta/crear-venta.html
@@ -253,7 +253,7 @@
 
     <div class="t-center t-bold">ÓPTICA MACÍAS</div>
     <div class="t-center t-small">RUC: 0999999999001</div>
-    <div class="t-center t-small">Machala - Ecuador</div>
+    <div class="t-center t-small">Pasaje - Ecuador</div>
 
     <div class="t-hr"></div>
 
