--- a/src/app/modules/clientes/pages/historial-print/historial-print.html
+++ b/src/app/modules/clientes/pages/historial-print/historial-print.html
@@ -2,7 +2,7 @@
 
     <div class="t-center t-bold">ÓPTICA MACÍAS</div>
     <div class="t-center t-small">Historial Clínico</div>
-    <div class="t-center t-small">Machala - Ecuador</div>
+    <div class="t-center t-small">Pasaje - Ecuador</div>
 
     <div class="t-hr"></div>
 
